--- a/ringkasanRevoU.html
+++ b/ringkasanRevoU.html
@@ -542,7 +542,7 @@
             <p>< span>1< /span></p>
             <p>< span>2< /span></p>
             <p>< span>3< /span></p>
-
+        </fieldset>
         <li>Membuat Kalkulator (Lest Sesion)</li>
 
             <table>
@@ -579,7 +579,42 @@
                     <td><button>=</button></td>
                 </tr>
             </table>
-        </fieldset>
-        </ol>
+            <fieldset><legend>Code</legend>
+            <p>< table></p>
+                <p>< tr></p>
+                    <p>< th colspan="4">< input type="text" name="display">< /th></p>
+                <p>< /tr></p>
+                <p>< tr></p>
+                   <p>< td colspan="2">< button>AC< /button>< /td></p> 
+                   <p>< td>< button>C< /button>< /td></p>
+                    <p>< td>< button>*< /button>< /td></p>
+                <p>< /tr></p>
+                <p>< tr></p>
+                    <p>< td>< button>7< /button>< /td></p>
+                    <p>< td>< button>8< /button>< /td></p>
+                    <p>< td>< button>9< /button>< /td></p>
+                     <p>< td>< button>/< /button>< /td></p>
+                <p>< /tr></p>
+                <p>< tr></p>
+                    <p>< td>< button>4< /button>< /td></p>
+                    <p>< td>< button>5< /button>< /td></p>
+                    <p>< td>< button>6< /button>< /td></p>
+                    <p>< td>< button>+< /button>< /td></p>
+                <p>< /tr></p>
+                <p>< tr></p>
+                    <p>< td>< button>1< /button>< /td></p>
+                    <p>< td>< button>2< /button>< /td></p>
+                    <p>< td>< button>3< /button>< /td></p>
+                    <p>< td>< button>-< /button>< /td></p>
+                <p>< /tr>
+                <p>< tr>
+                    <p>< td>< button>+-< /button>< /td></p>
+                    <p>< td>< button>0< /button>< /td></p>
+                    <p>< td>< button>.< /button>< /td></p>
+                    <p>< td>< button>=< /button>< /td></p>
+                <p>< /tr></p>
+                <p>< /table></p>
+                </fieldset>
+    
      </body>
 </html>
